# multiprocessing-for-loop-python

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
multiprocessing_iterator/: __init__.py  iterator.py
